src/BlasSharp.AppleAccelerate/NativeMethods.CBLAS.g.cs


        [DllImport(__DllName, EntryPoint = "cblas_dtrsm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dtrsm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, double __alpha, double* __A, int __lda, double* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_cgemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cgemm(uint __Order, uint __TransA, uint __TransB, int __M, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_csymm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_csymm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_csyrk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_csyrk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_csyr2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_csyr2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_ctrmm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctrmm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_ctrsm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ctrsm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_zgemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zgemm(uint __Order, uint __TransA, uint __TransB, int __M, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zsymm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zsymm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zsyrk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zsyrk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zsyr2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zsyr2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_ztrmm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztrmm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_ztrsm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ztrsm(uint __Order, uint __Side, uint __Uplo, uint __TransA, uint __Diag, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb);

        [DllImport(__DllName, EntryPoint = "cblas_chemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_chemm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_cherk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cherk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, float __alpha, void* __A, int __lda, float __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_cher2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cher2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, float __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zhemm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zhemm(uint __Order, uint __Side, uint __Uplo, int __M, int __N, void* __alpha, void* __A, int __lda, void* __B, int __ldb, void* __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zherk", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zherk(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, double __alpha, void* __A, int __lda, double __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "cblas_zher2k", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zher2k(uint __Order, uint __Uplo, uint __Trans, int __N, int __K, void* __alpha, void* __A, int __lda, void* __B, int __ldb, double __beta, void* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "appleblas_sgeadd", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void appleblas_sgeadd(uint __order, uint __transA, uint __transB, int __m, int __n, float __alpha, float* __A, int __lda, float __beta, float* __B, int __ldb, float* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "appleblas_dgeadd", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void appleblas_dgeadd(uint __order, uint __transA, uint __transB, int __m, int __n, double __alpha, double* __A, int __lda, double __beta, double* __B, int __ldb, double* __C, int __ldc);

        [DllImport(__DllName, EntryPoint = "sparse_inner_product_dense_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float sparse_inner_product_dense_float(ulong nz, float* x, long* indx, float* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_inner_product_dense_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double sparse_inner_product_dense_double(ulong nz, double* x, long* indx, double* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_inner_product_sparse_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float sparse_inner_product_sparse_float(ulong nzx, ulong nzy, float* x, long* indx, float* y, long* indy);

        [DllImport(__DllName, EntryPoint = "sparse_inner_product_sparse_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double sparse_inner_product_sparse_double(ulong nzx, ulong nzy, double* x, long* indx, double* y, long* indy);

        [DllImport(__DllName, EntryPoint = "sparse_vector_add_with_scale_dense_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sparse_vector_add_with_scale_dense_float(ulong nz, float alpha, float* x, long* indx, float* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_vector_add_with_scale_dense_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sparse_vector_add_with_scale_dense_double(ulong nz, double alpha, double* x, long* indx, double* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_vector_norm_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float sparse_vector_norm_float(ulong nz, float* x, long* indx, uint norm);

        [DllImport(__DllName, EntryPoint = "sparse_vector_norm_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double sparse_vector_norm_double(ulong nz, double* x, long* indx, uint norm);

        [DllImport(__DllName, EntryPoint = "sparse_matrix_vector_product_dense_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_matrix_vector_product_dense_float(uint transa, float alpha, sparse_m_float* A, float* x, long incx, float* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_matrix_vector_product_dense_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_matrix_vector_product_dense_double(uint transa, double alpha, sparse_m_double* A, double* x, long incx, double* y, long incy);

        [DllImport(__DllName, EntryPoint = "sparse_vector_triangular_solve_dense_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_vector_triangular_solve_dense_float(uint transt, float alpha, sparse_m_float* T, float* x, long incx);

        [DllImport(__DllName, EntryPoint = "sparse_vector_triangular_solve_dense_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_vector_triangular_solve_dense_double(uint transt, double alpha, sparse_m_double* T, double* x, long incx);

        [DllImport(__DllName, EntryPoint = "sparse_outer_product_dense_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_outer_product_dense_float(ulong M, ulong N, ulong nz, float alpha, float* x, long incx, float* y, long* indy, sparse_m_float** C);

        [DllImport(__DllName, EntryPoint = "sparse_outer_product_dense_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_outer_product_dense_double(ulong M, ulong N, ulong nz, double alpha, double* x, long incx, double* y, long* indy, sparse_m_double** C);

        [DllImport(__DllName, EntryPoint = "sparse_permute_rows_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_permute_rows_float(sparse_m_float* A, long* perm);

        [DllImport(__DllName, EntryPoint = "sparse_permute_rows_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_permute_rows_double(sparse_m_double* A, long* perm);

        [DllImport(__DllName, EntryPoint = "sparse_permute_cols_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_permute_cols_float(sparse_m_float* A, long* perm);

        [DllImport(__DllName, EntryPoint = "sparse_permute_cols_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int sparse_permute_cols_double(sparse_m_double* A, long* perm);
